--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "escape-string-regexp": "^1.0.5",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "surge": "^0.20.1"
   },
   "scripts": {
     "start": "react-scripts start",
